Update menu page

--- a/src/index.css
+++ b/src/index.css
@@ -289,12 +289,12 @@ body {
             @apply grid md:grid-cols-4 grid-cols-2 md:gap-20 gap-10 sm:mb-32 mb-20 relative z-10 md:max-w-6xl md:mx-auto;
 
             button {
-                @apply md:text-3xl text-xl pb-2 cursor-pointer hover:text-yellow hover:border-yellow border-b-1 transition-colors font-modern-negra;
+                @apply md:text-3xl text-xl pb-2 cursor-pointer border-b-1 transition-colors font-modern-negra;
             }
         }
 
         .content {
-            @apply flex flex-col justify-between items-center container mx-auto relative;
+            @apply flex flex-col items-center container mx-auto justify-between relative;
 
             .arrows {
                 @apply flex items-center justify-between w-full absolute;
@@ -310,7 +310,7 @@ body {
         }
 
         .cocktail {
-            @apply flex-center mt-10;
+            @apply flex-center mt-20;
 
             img {
                 @apply object-contain h-[60vh];
@@ -321,7 +321,7 @@ body {
             @apply flex max-md:flex-col gap-10 md:items-center justify-between w-full lg:absolute bottom-0;
 
             .info {
-                @apply space-y-4 lg:translate-y-20;
+                @apply space-y-4 lg:translate-y-15;
 
                 #title {
                     @apply font-modern-negra md:text-6xl text-3xl text-yellow max-w-40;
