--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
     font-family: "Modern Negra";
     src: url("/fonts/Modern Negra Demo.ttf") format("truetype");
 }
-
+    
 @theme {
     --color-yellow: #e7d393;
     --color-white-100: #efefef;
@@ -252,7 +252,7 @@ body {
         }
 
         .cocktail-img {
-            @apply md:w-[60vw] w-full h-[50vh] md:h-[70vh] rounded-4xl overflow-hidden absolute top-0 md:top-1/2 md:-translate-y-1/2 left-1/2 -translate-x-1/2;
+            @apply md:w-[60vw] w-full h-[50vh] md:h-[70vh] rounded-4xl overflow-hidden absolute top-0 md:top-96 md:-translate-y-1/2 left-1/2 -translate-x-1/2;
         }
 
         .masked-container {
